@@ -1,3 +1,7 @@
+2007-11-13 David Barnett <daviebdawg@gmail.com>
+  * Merged changes from patch by Andreas Kabel to support the new COFF format
+  across all of gputils
+
 2007-11-12 David Barnett <daviebdawg@gmail.com>
   * [gpasm] Fixed -g option to give meaningful error instead of failed
   assertion when missing .file directive (bug #1825940)
